[package]
name = "termdrawascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
image = "0.24.5"
serde_json = "1.0.91"
termdrawserver = { git = "https://github.com/enokiun/termdrawserver", version = "0.1.0", default-features = false }
tungstenite = { version = "0.18.0", features = ["rustls", "rustls-tls-native-roots"] }
uuid = { version = "1.2.2", features = ["v4"] }
